--- a/web/summerjob/styles/custom.css
+++ b/web/summerjob/styles/custom.css
@@ -67,8 +67,6 @@
   background: #f5f5f5;
   padding-top: 23px;
   padding-bottom: 23px;
-  border-radius: 15px;
-  box-shadow: 1px 1px 6px;
   margin-right: 0px;
   margin-top: 0px;
   margin-left: 0px;
@@ -100,4 +98,12 @@ img.smj-nav-logo {
 
 .smj-navbar {
   background: #f5f5f5;
+}
+
+.smj-table-body {
+  background: rgb(247, 247, 247);
+}
+
+.smj-shadow {
+  box-shadow: 1px 1px 6px;
 }
