--- a/web/summerjob/styles/custom.css
+++ b/web/summerjob/styles/custom.css
@@ -1,23 +1,35 @@
 .nav-item .nav-link {
-  padding-top: 0.3rem !important;
-  padding-bottom: 0.3rem !important;
+  padding-top: 0.2rem !important;
+  padding-bottom: 0.2rem !important;
 }
 
-@media (min-width: 992px) {
+.navbar-div {
+  font-size: 150%;
+  padding: 10px;
+}
+
+@media (min-width: 768px) {
   .navbar-nav .navbar-div {
     padding-top: 4px;
     padding-bottom: 4px;
+    padding-right: 10px;
+    padding-left: 10px;
+    font-size: inherit;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar-nav .navbar-div {
+    padding-top: 6px;
+    padding-bottom: 6px;
     padding-right: 50px;
     padding-left: 15px;
   }
 }
 
-@media (min-width: 992px) {
-  .nav-link.active .navbar-div {
-    background: #f9da68;
-    border-style: none;
-    border-radius: 15px;
-  }
+.nav-link.active .navbar-div {
+  background: #f9da68;
+  border-style: none;
 }
 
 .plan-controlbar .btn {
