--- a/web/summerjob/styles/custom.css
+++ b/web/summerjob/styles/custom.css
@@ -146,3 +146,9 @@ img.smj-nav-logo {
 .smj-background-error {
   background-color: #ffd9d9;
 }
+
+.smj-dropdown-menu {
+  position: absolute;
+  inset: 0px auto auto 0px;
+  margin: 0px;
+}
