--- a/web/summerjob/styles/custom.css
+++ b/web/summerjob/styles/custom.css
@@ -152,3 +152,31 @@ img.smj-nav-logo {
   inset: 0px auto auto 0px;
   margin: 0px;
 }
+
+.outline-none {
+  outline: none;
+}
+
+.smj-filter-input {
+  min-width: 200px;
+}
+
+.smj-filter-input option:first-of-type {
+  color: #888;
+}
+
+.smj-default-option {
+  color: #888;
+}
+
+.smj-filter-input option {
+  color: #000;
+}
+
+.sort-inactive {
+  color: rgb(151 151 151 / 24%);
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
