--- a/web/summerjob/styles/custom.css
+++ b/web/summerjob/styles/custom.css
@@ -180,3 +180,7 @@ img.smj-nav-logo {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.error-code-border {
+  border-right: 1px solid rgb(114, 114, 114);
+}
