Add and remove cars from web

--- a/web/summerjob/styles/custom.css
+++ b/web/summerjob/styles/custom.css
@@ -197,3 +197,7 @@ img.smj-nav-logo {
 .smj-action-delete {
   color: #9c0000;
 }
+
+.spinning {
+  animation: 1s linear infinite spinner-border;
+}
