--- a/web/summerjob/styles/custom.css
+++ b/web/summerjob/styles/custom.css
@@ -3,9 +3,9 @@
   padding-bottom: 0.2rem !important;
 }
 
-.navbar-div {
-  font-size: 150%;
-  padding: 10px;
+.navbar-nav .navbar-div {
+  font-size: 120%;
+  padding: 0.2rem;
 }
 
 @media (min-width: 768px) {
@@ -14,7 +14,10 @@
     padding-bottom: 4px;
     padding-right: 10px;
     padding-left: 10px;
-    font-size: inherit;
+  }
+
+  .navbar-nav .navbar-div {
+    font-size: 100%;
   }
 }
 
