--- a/web/summerjob/styles/print.css
+++ b/web/summerjob/styles/print.css
@@ -3,7 +3,7 @@
   height: 297mm;
   padding: 0;
   border: 0;
-  font-size: 12pt;
+  font-size: 11pt;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif, serif;
   line-height: 1.5;
   color: #000;
@@ -33,11 +33,12 @@ h2 {
   margin-bottom: 1rem;
 }
 
-.rounded-border {
-  border: 1px solid #000;
-  border-radius: 5px;
+.jobinfo-container {
+  display: flex;
+  align-items: flex-start;
   padding: 0.5rem;
   margin-bottom: 1rem;
+  border-top: 4px solid #acacac;
   page-break-after: auto;
   page-break-inside: avoid;
   page-break-before: auto;
@@ -62,6 +63,10 @@ h2 {
   margin-right: 1.5rem;
 }
 
+.me-4 {
+  margin-right: 2rem;
+}
+
 .ms-1 {
   margin-left: 0.5rem;
 }
@@ -72,4 +77,46 @@ h2 {
 
 .ms-3 {
   margin-left: 1.5rem;
+}
+
+.ms-4 {
+  margin-left: 2rem;
+}
+
+.job-number-col {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 3rem;
+  line-height: 3rem;
+  margin-right: 0.5rem;
+}
+
+.job-data-col {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+}
+
+.w-50 {
+  width: 50%;
+}
+
+.ride {
+  border: 3px solid #c0c0c0;
+  padding: 0.2rem;
+  margin-bottom: 0.5rem;
+  margin-left: 0.5rem;
+}
+
+.mt-2 {
+  margin-top: 1rem;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.driver-name {
+  margin: 0rem 0.5rem;
+  border-bottom: 1px solid #c0c0c0;
 }
