--- a/web/summerjob/styles/custom.css
+++ b/web/summerjob/styles/custom.css
@@ -35,7 +35,7 @@
   border-style: none;
 }
 
-.plan-controlbar .btn {
+.header-controlbar .btn {
   padding-top: 5.8px;
   padding-bottom: 5.8px;
 }
@@ -90,9 +90,9 @@
   padding: 6px;
 }
 
-.plan-controlbar i.far,
-.plan-controlbar i.fas {
-  margin-right: 10px;
+.btn-with-icon > i.far,
+.btn-with-icon > i.fas {
+  margin-right: 0.6rem;
 }
 
 img.smj-nav-logo {
