Print workers page

--- a/web/summerjob/styles/print.css
+++ b/web/summerjob/styles/print.css
@@ -11,13 +11,27 @@
   margin: 0;
 }
 
+.print-a4-landscape {
+  width: 297mm;
+  height: 210mm;
+  padding: 0;
+  border: 0;
+  font-size: 11pt;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif, serif;
+  line-height: 1.5;
+  color: #000;
+  background: #fff;
+  margin: 0;
+}
+
 body,
 html {
   margin: 0;
   padding: 0;
 }
 
-body:has(.print-a4) {
+body:has(.print-a4),
+body:has(.print-a4-landscape) {
   background-color: initial;
 }
 
@@ -105,6 +119,18 @@ h2 {
   width: 50%;
 }
 
+.w-20 {
+  width: 20%;
+}
+
+.w-12 {
+  width: 12%;
+}
+
+.w-7 {
+  width: 7%;
+}
+
 .ride {
   border: 3px solid #c0c0c0;
   padding: 0.2rem;
@@ -123,4 +149,34 @@ h2 {
 .driver-name {
   margin: 0rem 0.5rem;
   border-bottom: 1px solid #c0c0c0;
+}
+
+.workers-thead {
+  text-align: left;
+}
+
+.table-print {
+  width: 100%;
+  table-layout: fixed;
+}
+
+.table-print,
+.table-print td,
+.table-print th {
+  border: 1px solid #c0c0c0;
+  border-collapse: collapse;
+}
+
+.table-print td {
+  padding: 0.2rem;
+}
+
+.text-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.text-break-word {
+  word-break: break-word;
 }
