--- a/web/summerjob/styles/print.css
+++ b/web/summerjob/styles/print.css
@@ -67,6 +67,7 @@ h2 {
   margin: 0;
   padding: 0;
   display: inline-block;
+  width: auto;
 }
 
 .me-1 {
@@ -121,6 +122,14 @@ h2 {
 
 .w-20 {
   width: 20%;
+}
+
+.w-18 {
+  width: 18%;
+}
+
+.w-15 {
+  width: 15%;
 }
 
 .w-12 {
