Change button classes to match theme color

--- a/web/styles/custom.css
+++ b/web/styles/custom.css
@@ -36,8 +36,8 @@
 }
 
 .header-controlbar .btn {
-  padding-top: 5.8px;
-  padding-bottom: 5.8px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .row-plan-job {
