fix: feedback fixes

--- a/web/styles/custom.css
+++ b/web/styles/custom.css
@@ -762,3 +762,22 @@ img.smj-nav-logo {
   background-color: #fdc345;
 }
 
+.w-45 {
+  width: 45% !important;
+}
+
+.infobox {
+  --bs-bg-opacity: 1;
+  background-color: #DAEDFF;
+  padding: 8px;
+  padding-right: 40px;
+  border-radius: 10px;
+}
+
+form.application .light-placeholder + input::placeholder,
+form.application .light-placeholder + textarea::placeholder,
+form.application .light-placeholder + div > input::placeholder,
+form.application input.custom-input::placeholder{
+  color: var(--bs-gray-400);
+  font-size: medium;
+}
