--- a/web/styles/custom.css
+++ b/web/styles/custom.css
@@ -791,3 +791,7 @@ form.application input.custom-input::placeholder{
 .border-start-warning {
   border-left-color: #fdcc37 !important; 
 }
+
+@media (min-width: 768px) {
+  .w-md-45 { width: 45% !important; }
+}
